packages/sycamore-macro/tests/component/component-fail.stderr
error: function must return `sycamore::template::Template`
 --> $DIR/component-fail.rs:5:1
  |
5 | fn comp1() {
  | ^^^^^^^^^^
