packages/sycamore-macro/tests/component/component-fail.rs
use sycamore::prelude::*;

/// Missing return type.
#[component(Comp1<G>)]
fn comp1() {
    todo!();
}

fn main() {}
